Switched from linkedlist to abstractions